@@ -47,16 +47,16 @@ static int pl3_find2_browser_key_press_event(GtkWidget *mw, GdkEventKey *event, 
 extern GladeXML *pl3_xml;
 
 enum{
-	PL3_FINDB_PATH,
-	PL3_FINDB_TYPE,
-	PL3_FINDB_TITLE,
-	PL3_FINDB_ICON,
-	PL3_FINDB_PID,
-	PL3_FINDB_ROWS
+	PL3_FIND2_PATH,
+	PL3_FIND2_TYPE,
+	PL3_FIND2_TITLE,
+	PL3_FIND2_ICON,
+	PL3_FIND2_PID,
+	PL3_FIND2_ROWS
 };
 
 
-#define	PL3_FINDB_CB_PLAYLIST 99
+#define	PL3_FIND2_CB_PLAYLIST 99
 /**
  * Plugin structure
  */
@@ -106,6 +106,7 @@ GtkWidget 	*pl3_find2_tree 	= NULL;
 GtkListStore 	*pl3_find2_store 	= NULL;
 GtkWidget 	*pl3_find2_vbox 	= NULL;
 GtkWidget	*pl3_find2_findbut     = NULL;
+GtkWidget       *pl3_find2_critaddbut   = NULL;
 GtkListStore	*pl3_find2_combo_store 	= NULL;
 GtkWidget	*pl3_find2_pb = NULL;
 
@@ -138,7 +139,7 @@ static void pl3_find2_fill_combo()
 		gtk_list_store_set(pl3_find2_combo_store, &iter, 1, mpdTagItemKeys[i], 0,i, -1);	
 	}
 /*	gtk_list_store_append(pl3_find2_combo_store, &iter);
-	gtk_list_store_set(pl3_find2_combo_store, &iter, 1, "Playlist", 0,PL3_FINDB_CB_PLAYLIST, -1);
+	gtk_list_store_set(pl3_find2_combo_store, &iter, 1, "Playlist", 0,PL3_FIND2_CB_PLAYLIST, -1);
 
 	gtk_combo_box_set_active(GTK_COMBO_BOX(pl3_find2_combo), 0);
 */
@@ -159,6 +160,7 @@ static void pl3_find2_browser_remove_crit(GtkWidget *button,crit_struct *cs)
         gtk_widget_set_sensitive(pl3_find2_findbut, FALSE);
     }
     pl3_find2_browser_search();
+    gtk_widget_set_sensitive(pl3_find2_critaddbut, TRUE);
 }
 static void pl3_find2_browser_add_crit()
 {
@@ -189,123 +191,135 @@ static void pl3_find2_browser_add_crit()
     criterias = g_list_append(criterias, cs);
 
     gtk_widget_show_all(pl3_find2_vbox);
-    gtk_widget_grab_focus(cs->combo);
+    /** This causes some weird crashes when adding a default crit */
+   /* gtk_widget_grab_focus(cs->combo);*/
     gtk_widget_set_sensitive(pl3_find2_findbut, TRUE);
+
+   
+    gtk_widget_set_sensitive(pl3_find2_critaddbut, TRUE);
+    if(g_list_length(criterias) >= (MPD_TAG_NUM_OF_ITEM_TYPES-1))
+    {
+        gtk_widget_set_sensitive(pl3_find2_critaddbut, FALSE);
+    }
 }
 
 static void pl3_find2_browser_init()
 {
-	GtkCellRenderer *renderer;
-	GtkTreeViewColumn *column = NULL;
-	GtkWidget  *pl3_find2_sw = NULL;
-	GtkWidget *hbox = NULL;
+    GtkCellRenderer *renderer;
+    GtkTreeViewColumn *column = NULL;
+    GtkWidget  *pl3_find2_sw = NULL;
+    GtkWidget *hbox = NULL;
 
-	GValue value = {0,};
-	pl3_find2_store = gtk_list_store_new (PL3_FINDB_ROWS, 
-			G_TYPE_STRING, /* path to file */
-			G_TYPE_INT,	/* type, FILE/PLAYLIST/FOLDER  */
-			G_TYPE_STRING,	/* title to display */
-			G_TYPE_STRING,
-			G_TYPE_INT); /* icon type */
-
-
-        pl3_find2_combo_store = gtk_list_store_new(2,G_TYPE_INT, G_TYPE_STRING);
-        pl3_find2_fill_combo();
-
-        /* Column */
-	renderer = gtk_cell_renderer_pixbuf_new ();
-	column = gtk_tree_view_column_new ();
-	gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_AUTOSIZE);
-	gtk_tree_view_column_pack_start (column, renderer, FALSE);
-	gtk_tree_view_column_set_attributes (column,renderer,"stock-id", PL3_FINDB_ICON,NULL);
+    GValue value = {0,};
+    pl3_find2_store = gtk_list_store_new (PL3_FIND2_ROWS, 
+            G_TYPE_STRING, /* path to file */
+            G_TYPE_INT,	/* type, FILE/PLAYLIST/FOLDER  */
+            G_TYPE_STRING,	/* title to display */
+            G_TYPE_STRING,
+            G_TYPE_INT); /* icon type */
 
 
-	/* set value for ALL */
-	g_value_init(&value, G_TYPE_FLOAT);
-	g_value_set_float(&value, 0.0);
-	g_object_set_property(G_OBJECT(renderer), "yalign", &value); 
+    pl3_find2_combo_store = gtk_list_store_new(2,G_TYPE_INT, G_TYPE_STRING);
+    /** Fill the view */
+    pl3_find2_fill_combo();
 
-	renderer = gtk_cell_renderer_text_new ();
-	gtk_tree_view_column_pack_start (column, renderer, TRUE);
-	gtk_tree_view_column_set_attributes (column,renderer,"text", PL3_FINDB_TITLE, NULL);
-
-
-	/* set up the tree */
-	pl3_find2_tree= gtk_tree_view_new_with_model(GTK_TREE_MODEL(pl3_find2_store));
-	/* insert the column in the tree */
-	gtk_tree_view_append_column (GTK_TREE_VIEW (pl3_find2_tree), column);                                         	
-	gtk_tree_view_set_headers_visible(GTK_TREE_VIEW(pl3_find2_tree), FALSE);
-	gtk_tree_view_set_rules_hint(GTK_TREE_VIEW(pl3_find2_tree), TRUE);
-	gtk_tree_selection_set_mode(gtk_tree_view_get_selection(GTK_TREE_VIEW(pl3_find2_tree)), GTK_SELECTION_MULTIPLE);
-
-	/* setup signals */
-	g_signal_connect(G_OBJECT(pl3_find2_tree), "row-activated",G_CALLBACK(pl3_find2_browser_row_activated), NULL); 
-	g_signal_connect(G_OBJECT(pl3_find2_tree), "button-press-event", G_CALLBACK(pl3_find2_browser_button_press_event), NULL);
-	g_signal_connect(G_OBJECT(pl3_find2_tree), "button-release-event", G_CALLBACK(pl3_find2_browser_button_release_event), NULL);
-	g_signal_connect(G_OBJECT(pl3_find2_tree), "key-press-event", G_CALLBACK(pl3_find2_browser_playlist_key_press), NULL);
-
-	/* set up the scrolled window */
-	pl3_find2_sw = gtk_scrolled_window_new(NULL, NULL);
-	gtk_scrolled_window_set_policy(GTK_SCROLLED_WINDOW(pl3_find2_sw), GTK_POLICY_AUTOMATIC,GTK_POLICY_AUTOMATIC);
-	gtk_scrolled_window_set_shadow_type(GTK_SCROLLED_WINDOW(pl3_find2_sw), GTK_SHADOW_ETCHED_IN);
-	gtk_container_add(GTK_CONTAINER(pl3_find2_sw), pl3_find2_tree);
-
-	/* set initial state */
-
-	pl3_find2_vbox = gtk_vbox_new(FALSE, 6);
-        gtk_box_pack_end(GTK_BOX(pl3_find2_vbox), pl3_find2_sw, TRUE, TRUE,0);
-
-        /* pom */
-        GtkWidget *event = gtk_event_box_new();
-        GtkWidget *vbox = gtk_vbox_new(FALSE,6);
-        GtkWidget *label = gtk_label_new("");
-        gtk_misc_set_alignment(GTK_MISC(label), 0,0.5);
-        /* Add button */
-        GtkWidget *addbut = gtk_button_new();
-        gtk_button_set_image(GTK_BUTTON(addbut), gtk_image_new_from_stock(GTK_STOCK_ADD, GTK_ICON_SIZE_BUTTON));
-        g_signal_connect(G_OBJECT(addbut), "clicked", G_CALLBACK(pl3_find2_browser_add_crit), NULL);
+    /* Column */
+    renderer = gtk_cell_renderer_pixbuf_new ();
+    column = gtk_tree_view_column_new ();
+    gtk_tree_view_column_set_sizing(column, GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+    gtk_tree_view_column_pack_start (column, renderer, FALSE);
+    gtk_tree_view_column_set_attributes (column,renderer,"stock-id", PL3_FIND2_ICON,NULL);
 
 
-        /* Find button */
-        pl3_find2_findbut = gtk_button_new_from_stock(GTK_STOCK_FIND);
-        gtk_widget_set_sensitive(pl3_find2_findbut, FALSE);
-        g_signal_connect(G_OBJECT(pl3_find2_findbut), "clicked", G_CALLBACK(pl3_find2_browser_search),NULL);
-	gtk_label_set_markup(GTK_LABEL(label), _("<span size='xx-large' weight='bold'>Database Search</span>"));
-        hbox = gtk_hbox_new(FALSE,0);
-        gtk_box_pack_start(GTK_BOX(hbox), label, TRUE, TRUE,0);
-        gtk_box_pack_start(GTK_BOX(hbox), pl3_find2_findbut, FALSE, TRUE,0);       
-        gtk_box_pack_start(GTK_BOX(hbox), addbut, FALSE, TRUE,0);       
-        gtk_box_pack_start(GTK_BOX(vbox), hbox, FALSE, TRUE,0);
-        /* add it */
+    /* set value for ALL */
+    g_value_init(&value, G_TYPE_FLOAT);
+    g_value_set_float(&value, 0.0);
+    g_object_set_property(G_OBJECT(renderer), "yalign", &value); 
 
-        gtk_container_set_border_width(GTK_CONTAINER(vbox), 12);
-	g_signal_connect(G_OBJECT(vbox), "style-set", G_CALLBACK(pl3_find2_browser_bg_style_changed), event);
+    renderer = gtk_cell_renderer_text_new ();
+    gtk_tree_view_column_pack_start (column, renderer, TRUE);
+    gtk_tree_view_column_set_attributes (column,renderer,"text", PL3_FIND2_TITLE, NULL);
 
-        pl3_find2_crit_vbox = gtk_vbox_new(FALSE,6);
-        gtk_box_pack_start(GTK_BOX(vbox), pl3_find2_crit_vbox, FALSE, TRUE,0);
 
-        /* add it */
-        gtk_container_add(GTK_CONTAINER(event), vbox);
-        gtk_box_pack_start(GTK_BOX(pl3_find2_vbox), event, FALSE, TRUE,0);
+    /* set up the tree */
+    pl3_find2_tree= gtk_tree_view_new_with_model(GTK_TREE_MODEL(pl3_find2_store));
+    /* insert the column in the tree */
+    gtk_tree_view_append_column (GTK_TREE_VIEW (pl3_find2_tree), column);                                         	
+    gtk_tree_view_set_headers_visible(GTK_TREE_VIEW(pl3_find2_tree), FALSE);
+    gtk_tree_view_set_rules_hint(GTK_TREE_VIEW(pl3_find2_tree), TRUE);
+    gtk_tree_selection_set_mode(gtk_tree_view_get_selection(GTK_TREE_VIEW(pl3_find2_tree)), GTK_SELECTION_MULTIPLE);
 
-	gtk_widget_show_all(pl3_find2_vbox);
-	g_object_ref(G_OBJECT(pl3_find2_vbox));
+    /* setup signals */
+    g_signal_connect(G_OBJECT(pl3_find2_tree), "row-activated",G_CALLBACK(pl3_find2_browser_row_activated), NULL); 
+    g_signal_connect(G_OBJECT(pl3_find2_tree), "button-press-event", G_CALLBACK(pl3_find2_browser_button_press_event), NULL);
+    g_signal_connect(G_OBJECT(pl3_find2_tree), "button-release-event", G_CALLBACK(pl3_find2_browser_button_release_event), NULL);
+    g_signal_connect(G_OBJECT(pl3_find2_tree), "key-press-event", G_CALLBACK(pl3_find2_browser_playlist_key_press), NULL);
+
+    /* set up the scrolled window */
+    pl3_find2_sw = gtk_scrolled_window_new(NULL, NULL);
+    gtk_scrolled_window_set_policy(GTK_SCROLLED_WINDOW(pl3_find2_sw), GTK_POLICY_AUTOMATIC,GTK_POLICY_AUTOMATIC);
+    gtk_scrolled_window_set_shadow_type(GTK_SCROLLED_WINDOW(pl3_find2_sw), GTK_SHADOW_ETCHED_IN);
+    gtk_container_add(GTK_CONTAINER(pl3_find2_sw), pl3_find2_tree);
+
+    /* set initial state */
+
+    pl3_find2_vbox = gtk_vbox_new(FALSE, 6);
+    gtk_box_pack_end(GTK_BOX(pl3_find2_vbox), pl3_find2_sw, TRUE, TRUE,0);
+
+    /* pom */
+    GtkWidget *event = gtk_event_box_new();
+    GtkWidget *vbox = gtk_vbox_new(FALSE,6);
+    GtkWidget *label = gtk_label_new("");
+    gtk_misc_set_alignment(GTK_MISC(label), 0,0.5);
+    /* Add button */
+    pl3_find2_critaddbut = gtk_button_new();
+    gtk_button_set_image(GTK_BUTTON(pl3_find2_critaddbut), gtk_image_new_from_stock(GTK_STOCK_ADD, GTK_ICON_SIZE_BUTTON));
+    g_signal_connect(G_OBJECT(pl3_find2_critaddbut), "clicked", G_CALLBACK(pl3_find2_browser_add_crit), NULL);
+
+
+    /* Find button */
+    pl3_find2_findbut = gtk_button_new_from_stock(GTK_STOCK_FIND);
+    gtk_widget_set_sensitive(pl3_find2_findbut, FALSE);
+    g_signal_connect(G_OBJECT(pl3_find2_findbut), "clicked", G_CALLBACK(pl3_find2_browser_search),NULL);
+    gtk_label_set_markup(GTK_LABEL(label), _("<span size='xx-large' weight='bold'>Database Search</span>"));
+    hbox = gtk_hbox_new(FALSE,0);
+    gtk_box_pack_start(GTK_BOX(hbox), label, TRUE, TRUE,0);
+    gtk_box_pack_start(GTK_BOX(hbox), pl3_find2_findbut, FALSE, TRUE,0);       
+    gtk_box_pack_start(GTK_BOX(hbox), pl3_find2_critaddbut, FALSE, TRUE,0);       
+    gtk_box_pack_start(GTK_BOX(vbox), hbox, FALSE, TRUE,0);
+    /* add it */
+
+    gtk_container_set_border_width(GTK_CONTAINER(vbox), 12);
+    g_signal_connect(G_OBJECT(vbox), "style-set", G_CALLBACK(pl3_find2_browser_bg_style_changed), event);
+
+    pl3_find2_crit_vbox = gtk_vbox_new(FALSE,6);
+    gtk_box_pack_start(GTK_BOX(vbox), pl3_find2_crit_vbox, FALSE, TRUE,0);
+
+    /* add it */
+    gtk_container_add(GTK_CONTAINER(event), vbox);
+    gtk_box_pack_start(GTK_BOX(pl3_find2_vbox), event, FALSE, TRUE,0);
+
+    gtk_widget_show_all(pl3_find2_vbox);
+    g_object_ref(G_OBJECT(pl3_find2_vbox));
+
+    /** Add a default item */
+   pl3_find2_browser_add_crit();
 }
 
 static void pl3_find2_browser_selected(GtkWidget *container)
 {
-	if(pl3_find2_tree == NULL)
-	{
-		pl3_find2_browser_init();
-	}
+    if(pl3_find2_tree == NULL)
+    {
+        pl3_find2_browser_init();
+    }
 
-	gtk_container_add(GTK_CONTAINER(container),pl3_find2_vbox);
-	gtk_widget_grab_focus(pl3_find2_tree);
-	gtk_widget_show(pl3_find2_vbox);
+    gtk_container_add(GTK_CONTAINER(container),pl3_find2_vbox);
+    gtk_widget_grab_focus(pl3_find2_tree);
+    gtk_widget_show(pl3_find2_vbox);
 }
 static void pl3_find2_browser_unselected(GtkWidget *container)
 {
-	gtk_container_remove(GTK_CONTAINER(container), pl3_find2_vbox);
+    gtk_container_remove(GTK_CONTAINER(container), pl3_find2_vbox);
 }
 
 
@@ -317,15 +331,15 @@ static void pl3_find2_browser_unselected(GtkWidget *container)
 /* add's the toplevel entry for the current playlist view */
 static void pl3_find2_browser_add(GtkWidget *cat_tree)
 {
-	GtkTreeIter iter;
-	gtk_tree_store_append(pl3_tree, &iter, NULL);
-	gtk_tree_store_set(pl3_tree, &iter, 
-			PL3_CAT_TYPE, find2_browser_plug.id,
-			PL3_CAT_TITLE, _("Database Search"),
-			PL3_CAT_INT_ID, "",
-			PL3_CAT_ICON_ID, "gtk-find",
-			PL3_CAT_PROC, TRUE,
-			PL3_CAT_ICON_SIZE,GTK_ICON_SIZE_DND,-1);
+    GtkTreeIter iter;
+    gtk_tree_store_append(pl3_tree, &iter, NULL);
+    gtk_tree_store_set(pl3_tree, &iter, 
+            PL3_CAT_TYPE, find2_browser_plug.id,
+            PL3_CAT_TITLE, _("Database Search"),
+            PL3_CAT_INT_ID, "",
+            PL3_CAT_ICON_ID, "gtk-find",
+            PL3_CAT_PROC, TRUE,
+            PL3_CAT_ICON_SIZE,GTK_ICON_SIZE_DND,-1);
 }
 
 static unsigned long pl3_find2_browser_view_browser()
@@ -380,20 +394,20 @@ static unsigned long pl3_find2_browser_view_browser()
             /* add as child of the above created parent folder */
             gtk_list_store_append (pl3_find2_store, &child);
             gtk_list_store_set (pl3_find2_store, &child,
-                    PL3_FINDB_PATH, data->song->file,
-                    PL3_FINDB_TITLE, buffer,
-                    PL3_FINDB_TYPE, PL3_ENTRY_SONG, 
-                    PL3_FINDB_ICON, "media-audiofile", 
+                    PL3_FIND2_PATH, data->song->file,
+                    PL3_FIND2_TITLE, buffer,
+                    PL3_FIND2_TYPE, PL3_ENTRY_SONG, 
+                    PL3_FIND2_ICON, "media-audiofile", 
                     -1);
         }
         else if (data->type == MPD_DATA_TYPE_TAG && data->tag_type == MPD_TAG_ITEM_ARTIST)
         {
             gtk_list_store_prepend (pl3_find2_store, &child);
             gtk_list_store_set (pl3_find2_store, &child,
-                    PL3_FINDB_PATH, data->tag,
-                    PL3_FINDB_TITLE, data->tag,
-                    PL3_FINDB_TYPE, PL3_ENTRY_ARTIST, 
-                    PL3_FINDB_ICON, "media-artist", 			  
+                    PL3_FIND2_PATH, data->tag,
+                    PL3_FIND2_TITLE, data->tag,
+                    PL3_FIND2_TYPE, PL3_ENTRY_ARTIST, 
+                    PL3_FIND2_ICON, "media-artist", 			  
                     -1);
         }
         else if (data->type == MPD_DATA_TYPE_TAG && data->tag_type == MPD_TAG_ITEM_ALBUM)
@@ -409,10 +423,10 @@ static unsigned long pl3_find2_browser_view_browser()
             }
             gtk_list_store_prepend (pl3_find2_store, &child);
             gtk_list_store_set (pl3_find2_store, &child,
-                    PL3_FINDB_PATH, data->tag,
-                    PL3_FINDB_TITLE, buffer,
-                    PL3_FINDB_TYPE, PL3_ENTRY_ALBUM,
-                    PL3_FINDB_ICON, "media-album",
+                    PL3_FIND2_PATH, data->tag,
+                    PL3_FIND2_TITLE, buffer,
+                    PL3_FIND2_TYPE, PL3_ENTRY_ALBUM,
+                    PL3_FIND2_ICON, "media-album",
                     -1);
             q_free(buffer);
         }
@@ -453,17 +467,17 @@ static void pl3_find2_browser_show_info()
             GtkTreeModel *model = gtk_tree_view_get_model(GTK_TREE_VIEW(pl3_find2_tree));
             int type,id;
             gtk_tree_model_get_iter (model, &iter, (GtkTreePath *) list->data);
-            gtk_tree_model_get (model, &iter, PL3_FINDB_TYPE, &type,-1);
+            gtk_tree_model_get (model, &iter, PL3_FIND2_TYPE, &type,-1);
             if(type == PL3_CUR_PLAYLIST)
             {
-                gtk_tree_model_get(model,&iter,PL3_FINDB_PID, &id,-1);
+                gtk_tree_model_get(model,&iter,PL3_FIND2_PID, &id,-1);
                 call_id3_window (id);
             }
             else
             {
                 mpd_Song *song =NULL;
                 char *path;
-                gtk_tree_model_get(model,&iter,PL3_FINDB_PATH, &path,-1);
+                gtk_tree_model_get(model,&iter,PL3_FIND2_PATH, &path,-1);
                 song = mpd_database_get_fileinfo(connection, path);
                 if(song)
                     call_id3_window_song(song); 
@@ -486,12 +500,12 @@ static void pl3_find2_browser_row_activated(GtkTreeView *tree, GtkTreePath *tp)
     gint r_type;
     int id=-1;
     gtk_tree_model_get_iter(gtk_tree_view_get_model(tree), &iter, tp);
-    gtk_tree_model_get(gtk_tree_view_get_model(tree), &iter, PL3_FINDB_PATH,&song_id, PL3_FINDB_TYPE, &r_type, -1);
+    gtk_tree_model_get(gtk_tree_view_get_model(tree), &iter, PL3_FIND2_PATH,&song_id, PL3_FIND2_TYPE, &r_type, -1);
     switch(r_type)
     {
         case PL3_CUR_PLAYLIST:
 
-            gtk_tree_model_get(gtk_tree_view_get_model(tree), &iter, PL3_FINDB_PID,&id, -1);
+            gtk_tree_model_get(gtk_tree_view_get_model(tree), &iter, PL3_FIND2_PID,&id, -1);
             mpd_player_play_id(connection, id);
             break;
         default:
@@ -582,7 +596,7 @@ static void pl3_find2_browser_add_selected()
         {
             GtkTreePath *path = node->data;
             gtk_tree_model_get_iter (model, &iter, path);
-            gtk_tree_model_get (model, &iter, PL3_FINDB_PATH,&name, PL3_FINDB_TYPE, &type, -1);	  
+            gtk_tree_model_get (model, &iter, PL3_FIND2_PATH,&name, PL3_FIND2_TYPE, &type, -1);	  
             /* does this bitmask thingy works ok? I think it hsould */
             if(type&(PL3_ENTRY_SONG))
             {
@@ -612,51 +626,31 @@ static void pl3_find2_browser_button_release_event(GtkWidget *but, GdkEventButto
     if(event->button != 3) return;
     else if(gtk_tree_selection_count_selected_rows(gtk_tree_view_get_selection(GTK_TREE_VIEW(pl3_find2_tree))) > 0)
     {
-            GtkWidget *item;
-            GtkWidget *menu = gtk_menu_new();
-            item = gtk_image_menu_item_new_from_stock(GTK_STOCK_ADD,NULL);
-            gtk_menu_shell_append(GTK_MENU_SHELL(menu), item);
-            g_signal_connect(G_OBJECT(item), "activate",
-                    G_CALLBACK(pl3_find2_browser_add_selected), NULL);
-            /* add the replace widget */
-            item = gtk_image_menu_item_new_with_label("Replace");
-            gtk_image_menu_item_set_image(GTK_IMAGE_MENU_ITEM(item),
-                    gtk_image_new_from_stock(GTK_STOCK_REDO, GTK_ICON_SIZE_MENU));
-            gtk_menu_shell_append(GTK_MENU_SHELL(menu), item);
-            g_signal_connect(G_OBJECT(item), "activate",
-                    G_CALLBACK(pl3_find2_browser_replace_selected), NULL);
+        GtkWidget *item;
+        GtkWidget *menu = gtk_menu_new();
+        item = gtk_image_menu_item_new_from_stock(GTK_STOCK_ADD,NULL);
+        gtk_menu_shell_append(GTK_MENU_SHELL(menu), item);
+        g_signal_connect(G_OBJECT(item), "activate",
+                G_CALLBACK(pl3_find2_browser_add_selected), NULL);
+        /* add the replace widget */
+        item = gtk_image_menu_item_new_with_label("Replace");
+        gtk_image_menu_item_set_image(GTK_IMAGE_MENU_ITEM(item),
+                gtk_image_new_from_stock(GTK_STOCK_REDO, GTK_ICON_SIZE_MENU));
+        gtk_menu_shell_append(GTK_MENU_SHELL(menu), item);
+        g_signal_connect(G_OBJECT(item), "activate",
+                G_CALLBACK(pl3_find2_browser_replace_selected), NULL);
 
-            if(mpd_server_check_version(connection,0,12,0))
-            {
-                item = gtk_image_menu_item_new_from_stock(GTK_STOCK_DIALOG_INFO,NULL);
-                gtk_menu_shell_append(GTK_MENU_SHELL(menu), item);
-                g_signal_connect(G_OBJECT(item), "activate",
-                        G_CALLBACK(pl3_find2_browser_show_info), NULL);
-            }
-            gtk_widget_show_all(menu);
-            gtk_menu_popup(GTK_MENU(menu), NULL, NULL,NULL, NULL, event->button, event->time);
+        if(mpd_server_check_version(connection,0,12,0))
+        {
+            item = gtk_image_menu_item_new_from_stock(GTK_STOCK_DIALOG_INFO,NULL);
+            gtk_menu_shell_append(GTK_MENU_SHELL(menu), item);
+            g_signal_connect(G_OBJECT(item), "activate",
+                    G_CALLBACK(pl3_find2_browser_show_info), NULL);
+        }
+        gtk_widget_show_all(menu);
+        gtk_menu_popup(GTK_MENU(menu), NULL, NULL,NULL, NULL, event->button, event->time);
     }
     return;
-}
-
-static void pl3_find2_browser_search_playlist(void)
-{
-   /* if(pl3_find2_tree)
-    {
-        GtkTreeIter iter;
-        gtk_tree_model_get_iter_first(GTK_TREE_MODEL(pl3_find2_combo_store), &iter);
-        do{
-            int id=0;
-            gtk_tree_model_get(GTK_TREE_MODEL(pl3_find2_combo_store), &iter, 0, &id, -1);
-            if(id == PL3_FINDB_CB_PLAYLIST)
-            {
-                gtk_combo_box_set_active_iter(GTK_COMBO_BOX(pl3_find2_combo), &iter);
-            }
-        }while(gtk_tree_model_iter_next(GTK_TREE_MODEL(pl3_find2_combo_store), &iter));
-
-        gtk_widget_grab_focus(pl3_find2_entry);
-    }
-*/
 }
 
 static void pl3_find2_browser_disconnect()
@@ -701,7 +695,6 @@ static void pl3_playlist_search()
         gtk_tree_selection_select_path(sel, path);
         gtk_tree_view_set_cursor(GTK_TREE_VIEW(glade_xml_get_widget(pl3_xml, "cat_tree")), path, NULL, FALSE);
         gtk_tree_path_free(path);
-        pl3_find2_browser_search_playlist();
     }
 }
 
@@ -726,6 +719,7 @@ static void pl3_find2_browser_connection_changed(MpdObj *mi, int connect, gpoint
         pl3_find2_browser_disconnect();
     }
 }
+
 static int pl3_find2_browser_key_press_event(GtkWidget *mw, GdkEventKey *event, int type)
 {
     if (event->keyval == GDK_F4)
