@@ -1,3 +1,8 @@
+30-12-2006 Qball <qball@qballcow.nl>
+    * src/playlist3-find2-browser.c: Cleaned up. Added max search criterias and
+    default search on open.
+    * src/plugin.c: Removed Markup from error messages.
+
 29-12-2006 Qball <Qball@qballcow.nl>
     * src/playlis3-find2-browser.*: Added a improved database search
 
